--- a/public/index.htm
+++ b/public/index.htm
@@ -16,11 +16,41 @@
     <link href="js/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="js/bower_components/c3/c3.min.css" rel="stylesheet" />
 
-    <link href="main.css" rel="stylesheet" />
+    <link href="main.css" rel="stylesheet">
 
     <style>
     body {
       font-family: calibri,arial;
+      padding: 2em;
+      padding-top: 0;
+    }
+
+    div.border {
+      border-left: 1px solid black;
+      border-right: 1px solid black;
+      margin-left: 1.5em;
+      margin-right: 1.5em;
+      padding-top: 2em;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      overflow-y: scroll;
+    }
+
+    header {
+      position: fixed;
+      background-color: cornflowerblue;
+      margin-top: 0;
+      top: 0;
+      left: 0;
+      right: 0;
+      opacity: 0.9;
+    }
+    header h1 {
+      margin-top: 0;
+      margin-bottom: 0;
     }
 
     </style>
@@ -28,9 +58,14 @@
   </head>
 
   <body>
+    <div class="border">
 
     <div class="content">
     </div>
+
+
+    </div>
+
 
     <script>
       if ( window.location.hash != "" ) {
@@ -38,17 +73,18 @@
       }
 
       window.onpopstate = function (event) {
-        if ( window.location.hash != "" ) {
+        if ( window.location.hash == "" ) {
+          $( ".content" ).load( "page/app.htm" );
+        } else {
           var p = window.location.hash.split( "/" );
           p[0] = p[0].substr(1);
           $( ".content" ).load( "page/" + p[0] + ".htm" );
         }
       }
 
-      $.get( "page/app.htm", function( content ) {
-        $( ".content" ).html( content );
-      });
+
+      $( ".content" ).load( "page/app.htm" );
     </script>
   </body>
 
-  </html>
+</html>
