--- a/public/index.htm
+++ b/public/index.htm
@@ -41,16 +41,20 @@
 
     header {
       position: fixed;
-      background-color: cornflowerblue;
+      background-color: #4169E1;
+      border-bottom: 1px solid black;
       margin-top: 0;
       top: 0;
       left: 0;
       right: 0;
-      opacity: 0.9;
+      z-index: 1000;
+      text-align: center;
     }
     header h1 {
-      margin-top: 0;
+      margin-top: 5px;
       margin-bottom: 0;
+      font-weight: 100;
+      color: white;
     }
 
     </style>
